<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpScrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="790dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="225dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-15dp"
                android:src="@drawable/signinimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edittext_bkg"
                    android:hint="First Name"
                    android:padding="5dp" />


                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="@drawable/edittext_bkg"
                    android:hint="Last Name"
                    android:padding="5dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="Email"
                android:padding="8dp" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <CheckBox
                android:id="@+id/is_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check if you are an Admin" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:background="@drawable/button"
                android:text="Signup"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>