<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ObservationForm"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:hint="Title"
        android:inputType="text"
        android:background="@drawable/edittext_bkg"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_bkg"/>

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:hint="Location"
        android:inputType="text"
        android:background="@drawable/edittext_bkg"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Cancel"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Create"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>

</LinearLayout>
