<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="225dp"
                android:src="@drawable/loginimg"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-15dp"/>

            <EditText
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/login_email"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Email"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/login_password"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>


            <Button
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:radius="10dp"
                android:textColor="@color/white"
                android:text="Login"
                android:background="@drawable/button"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>